<?xml version="1.0" encoding="utf-8"?>
<!--
 *******************************************************************************
 * Copyright (c) 2010 Octade Technologies  
 * 
 * This file is part of the Android IleSansFil Application project
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 *  
 *******************************************************************************
-->
<resources>
    <string name="app_name">ilesansfil</string>
	<string name="mapview_name">Map</string>
	<string name="webview_name">Isf Web</string>
    <string name="hello">Hello World,gui</string>
    <string name="ToggleButton01">Wifi  </string>    
    <string name="infoTitle">IleSansfil for Android</string>
    <string name="wifiInfoTitle">Wifi Information</string>
    <string name="infoSSID">SSID: </string>
    <string name="infoSupplicant">State : </string>
    <string name="locationInfoTitle">Location Information</string>
    <string name="infoPosition">Location : </string>
    <string name="infoHotSpot">Last HotSpot Information  </string>
    <string name="wifiSettingButton">Settings</string>	
</resources>
